# WICLIVE

./: .gitignore  README.md  bun.lockb  goes.ps1  goes.ts  index.html  package.json  tsconfig.json  update-version.ts  version.json  vite.config.ts  vite.config.ts.timestamp-1719819247031-003708ec884ba.mjs
.github/workflows/: page.yml  pages.yml  tauri-build-beta.yml  tauri-build-local.yml  tauri-build.yml
.github/workflows/scripts/: create-version-file.ts
_build/: Dockerfile  build.ps1  docker-compose.yml  key.reg
autoit/: accept_eula_game.au3  accept_eula_patch.au3  automate_game.au3  automate_patch.au3  tmp.au3
automation/: create_shortcut.ps1  setup_patch10.iss  setup_retail.iss
backend/: .gitignore  README.md  bun.lockb  index.ts  maplist.html  package.json  tsconfig.json
backend/src/: index.ts
dlls/: wic_cl_hook-version.txt
dlls/live/: wic_ds.ini
docs/: 404.html  index.html  version.json
docs/assets/: index-AwxsGOrc.css  index-BBG2KQuS.css  index-BD_s8pFB.js  index-BFXPWaKm.css  index-BHcahKHT.js  index-BOaitH9p.css  index-BPPtAXVl.css  index-BX8wz9fD.css  index-BZFqK9g2.js  index-BZPs-6J7.js  index-BZT9dxIe.js  index-B_P8V8BW.css  index-BcKqc1BM.js  index-Biasu9aV.js  index-BmJDMPgk.css  index-By8e2Qcu.js  index-CJHbzjVU.js  index-CJjuDV9-.js  index-CiDPCeHU.css  index-Cr6_X9uY.css  index-CwsqdrWb.css  index-CxZmwkAM.css  index-D1I3mixS.js  index-D2uyK71k.js  index-D6y2bvEF.js  index-D7ugbdmM.css  index-DCriA2P1.js  index-DFn-FQJa.js  index-DNaxEtmj.css  index-DkqE5Rdk.js  index-Dktqwulh.js  index-DzeUBWaf.js  index-Dzf6VavS.js  index-Sak-5VFH.js  index-Tl2QhiP2.css  index-aI0v3BNx.js  index-autKyQd7.css  index-bTWGtkRB.css  index-ndRkDppw.css  index-tvs00vgM.js
github-page/: README.md  bun.lockb  package.json  tsconfig.json  vite.config.ts
github-page/src/: App.vue
src/: App.vue  CONFIG.ts  get_config.ts  main.ts  router.ts  wic-cache.ts
src-tauri/: Cargo.toml  LICENSE  build.rs  tauri-sign.key.pub  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  environment.rs  init.rs  install.rs  io.rs  main.rs  map.rs  patch.rs
src/assets/: eula.txt  icon.kra  wiclive.kra  wiclive.png~
src/components/: Maps-Synchronize.vue  Maps-Upload.vue  action.vue  actions.vue  job.vue  jobs.vue
src/components/config/: main.vue
src/components/environment/: main.vue
src/components/maps/: main.vue  old.vue  synchronize.vue  upload.vue
src/components/patches/: main.vue  upload.vue
src/components/setup/: main.vue
src/components/views/: Home.vue  Init.vue  Install.vue
src/config_txt/: pro_bindings.txt  wicautoexec_minimum.txt
src/lib/: Bus.ts  wic-cache.ts  wic-content.ts  wic-download-progress.ts  wic-jobs.ts  wic-map.ts
src/views/: Home.vue  Init.vue  Install.vue  Maps.vue
wiclive-pages/: bun.lockb  package.json  tsconfig.json  version.json  vite.config.ts
wiclive-pages/src/: App.vue
wiclive-pages/src-tauri/: Cargo.toml  tauri.conf.json
workflows/: tauri-build.yml
