[package]
name = "wiclive"
version = "3.0.0-beta.19"
description = "WIC LIVE"
authors = ["mICON"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "dialog-open", "path-all", "shell-open", "updater"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11.26", features = ["stream"] }
tokio = { version = "1", features = ["full"] }
md5 = "0.7"
lazy_static = "1.4"
futures = "0.3"
futures-util = "0.3"
winreg = "0.52.0"
windows = { version = "0.54.0", features = ["Win32_Foundation", "Win32_Storage_FileSystem", "Win32_System_Diagnostics_ToolHelp"] }
winapi = { version = "0.3", features = ["processthreadsapi", "securitybaseapi", "handleapi"] }
zip = "0.6.6"
libc = "0.2.101"
rust-ini = "0.21.0"
powershell_script = "1.1.0"
regex = "1.5.4"
dotenv = "0.15.0"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
